--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">WeatherApp2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Signs -->
+    <string name="degree">°</string>
+
+    <!-- Templates -->
+    <string name="temp_part_of_day_template" translatable="false">%s: %s</string>
 </resources>
